docs: fix github banner responsiveness

--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -29,12 +29,8 @@
   <body>
     <section class="-mt-px border-y border-gray-200 bg-gray-100">
       <div class="mx-auto max-w-screen-xl px-4 py-2">
-        <div
-          class="flex flex-col sm:flex-row items-center justify-center gap-1.5"
-        >
-          <span class="text-sm/none font-medium"
-            >Enjoy PocketPages? Give it a star on GitHub 🎉</span
-          >
+      <div class="flex flex-row items-center justify-center gap-1.5">
+        <span class="hidden sm:block text-sm/none font-medium">Enjoy PocketPages? Give it a star on GitHub 🎉</span>
           <%- include(`/_include/version.ejs`) %>
         </div>
       </div>
