--- a/docs/pb_hooks/pages/_include/version.ejs
+++ b/docs/pb_hooks/pages/_include/version.ejs
@@ -1,13 +1,3 @@
-<a href="https://npmjs.com/package/pocketpages"
-  ><img
-    class="hidden sm:block"
-    src="https://img.shields.io/npm/d18m/pocketpages"
-/></a>
-<a href="https://npmjs.com/package/pocketpages"
-  ><img class="hidden sm:block" src="https://img.shields.io/npm/v/pocketpages"
-/></a>
-<a href="https://github.com/benallfree/pocketpages"
-  ><img
-    class="hidden sm:block"
-    src="https://img.shields.io/github/stars/benallfree/pocketpages"
-/></a>
+<a href="https://npmjs.com/package/pocketpages"><img src="https://img.shields.io/npm/d18m/pocketpages" /></a>
+<a href="https://npmjs.com/package/pocketpages"><img src="https://img.shields.io/npm/v/pocketpages" /></a>
+<a href="https://github.com/benallfree/pocketpages"><img src="https://img.shields.io/github/stars/benallfree/pocketpages" /></a>
