--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -13,12 +13,7 @@
 <%%= `Hello, PocketPages!` %></code></pre>
       </div>
 
-      <div class="mockup-browser bg-neutral border w-80 sm:w-full">
-        <div class="mockup-browser-toolbar">
-          <div class="input">http://localhost:8090</div>
-        </div>
-        <div class="bg-base-100 text-left px-4 pb-32">Hello, PocketPages!</div>
-      </div>
+      <%- include(`/_include/browser.ejs`, { content: `Hello, PocketPages!` }) %>
 
       <div class="bg-neutral-300 mt-20 p-10 rounded-md mt-4">
         <div class="text-2xl font-bold">Quickstart</div>
