--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -15,15 +15,11 @@
 
       <%- include(`/_include/browser.ejs`, { content: `Hello, PocketPages!` }) %>
 
-      <div class="bg-neutral-300 mt-20 p-10 rounded-md mt-4">
+      <div class="bg-neutral-300 p-4 sm:p-10 rounded-md mt-4 w-full">
         <div class="text-2xl font-bold">Quickstart</div>
         <%- include(`../_include/quickstart.ejs`) %>
-        <div
-          class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full"
-        >
-          <a href="/docs/overview" class="btn btn-accent mt-4 w-full"
-            >Read the Docs</a
-          >
+        <div class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full">
+          <a href="/docs/overview" class="btn btn-accent mt-4 w-full">Read the Docs</a>
         </div>
       </div>
     </div>
