feat: update htmx starter to work on first run
point to xpi instead of api, remove ctx as it doesn't work, specify folder index for count api

--- a/starters/htmx/pb_hooks/pages/(site)/index.ejs
+++ b/starters/htmx/pb_hooks/pages/(site)/index.ejs
@@ -1,4 +1,4 @@
 <h1>htmx starter kit</h1>
 <p>This is a starter kit shows you how to use htmx.</p>
 
-Counter <button hx-get="/api/count"><%- include('/_private/count.ejs') %></button>
+Counter <button hx-get="/xpi/count"><%- include('../_private/count.ejs') %></button>
