chore: update starter kits

--- a/docs/pb_hooks/pages/_include/quickstart.ejs
+++ b/docs/pb_hooks/pages/_include/quickstart.ejs
@@ -4,7 +4,7 @@
 
 
 <div class="max-w-2xl overflow-x-auto">
-  <pre><code class="language-bash">npx tiged https://git@github.com/benallfree/pocketpages/#0.10.0/starters/minimal/pb_hooks pb_hooks</code></pre>
+  <pre><code class="language-bash">npx tiged benallfree/pocketpages/starters/minimal/pb_hooks#v0.10.0 pb_hooks</code></pre>
 </div>
 
 <div class="text-left  overflow  text-2xl mt-5 mb-5">
