docs: update starter kits

--- a/docs/pb_hooks/pages/_include/quickstart.ejs
+++ b/docs/pb_hooks/pages/_include/quickstart.ejs
@@ -4,11 +4,11 @@
 
 
 <div class="max-w-2xl overflow-x-auto">
-  <pre><code class="language-bash">npx tiged benallfree/pocketpages/starters/minimal/pb_hooks#v0.10.0 pb_hooks</code></pre>
+  <pre><code class="language-bash">npx tiged benallfree/pocketpages/starters/minimal .</code></pre>
 </div>
 
 <div class="text-left  overflow  text-2xl mt-5 mb-5">
   Step 2: Run.
 </div>
-<pre class=""><code class="language-bash">pocketbase --dir=pb_data --dev serve 
+<pre class=""><code class="language-bash">pocketbase --dir=minimal/pb_data --dev serve 
 </code></pre>
