--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -13,11 +13,11 @@
 <%%= `Hello, PocketPages!` %></code></pre>
       </div>
 
-      <%- include(`/_include/browser.ejs`, { content: `Hello, PocketPages!` }) %>
+      <%- include(`browser.ejs`, { content: `Hello, PocketPages!` }) %>
 
       <div class="bg-neutral-300 p-4 sm:p-10 rounded-md mt-4 ">
         <div class="text-2xl font-bold">Quickstart</div>
-        <%- include(`/_include/quickstart.ejs`) %>
+        <%- include(`quickstart.ejs`) %>
         <div class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full">
           <a href="/docs/overview" class="btn btn-accent mt-4 w-full">Read the Docs</a>
         </div>
