--- a/docs/pb_hooks/pages/+layout.ejs
+++ b/docs/pb_hooks/pages/+layout.ejs
@@ -11,7 +11,7 @@
   <meta property="og:title" content="<%=meta('title') || 'PocketPages'%>" />
   <meta property="og:description" content="<%=meta('description') || 'Server-side pages for PocketBase'%>" />
   <meta property="og:image" content="<%=meta('image') || 'https://pocketpages.dev/android-chrome-512x512.png'%>" />
-  <meta property="og:url" content="<%=meta('path') ? `https://pocketpages.dev${meta('path')}` : meta('url') || `https://pocketpages.dev${ctx.request.url}`%>" />
+  <meta property="og:url" content="<%=meta('path') ? `https://pocketpages.dev${meta('path')}` : meta('url') || `https://pocketpages.dev${request.url}`%>" />
   <%- slots.head %>
 </head>
 
@@ -20,7 +20,7 @@
     <div class="mx-auto max-w-screen-xl px-4 py-2">
       <div class="flex flex-row items-center justify-center gap-1.5">
         <span class="hidden sm:block text-sm/none font-medium">Enjoy PocketPages? Give it a star on GitHub 🎉</span>
-        <%- include(`/_include/version.ejs`) %>
+        <%- include(`version.ejs`) %>
       </div>
     </div>
   </section>
