chore: clean up auth starter

--- a/starters/auth/pb_hooks/pages/account/change-email/index.ejs
+++ b/starters/auth/pb_hooks/pages/account/change-email/index.ejs
@@ -1,3 +1,11 @@
+<script server>
+  if (request.method === 'POST') {
+    const {
+      email
+    } = request.body()
+  }
+</script>
+
 <h2>Change Email</h2>
 
 <div>
