--- a/docs/pb_hooks/pages/(splash)/index.ejs
+++ b/docs/pb_hooks/pages/(splash)/index.ejs
@@ -15,10 +15,10 @@
 
       <%- include(`browser.ejs`, { content: `Hello, PocketPages!` }) %>
 
-      <div class="bg-neutral-300 p-4 sm:p-10 rounded-md mt-4 ">
+      <div class="bg-neutral-300 p-4 sm:p-10 rounded-md mt-4 w-full flex flex-col items-center">
         <div class="text-2xl font-bold">Quickstart</div>
         <%- include(`quickstart.ejs`) %>
-        <div class="text-left items-center flex flex-col w-full max-w-[320px] sm:max-w-full">
+        <div class=" items-center flex flex-col w-full max-w-[320px] sm:max-w-full">
           <a href="/docs/overview" class="btn btn-accent mt-4 w-full">Read the Docs</a>
         </div>
       </div>
