--- a/docs/pb_hooks/pages/_private/quickstart.ejs
+++ b/docs/pb_hooks/pages/_private/quickstart.ejs
@@ -3,12 +3,15 @@
 </div>
 
 
-<div class="max-w-2xl overflow-x-auto">
-  <pre><code class="language-bash">npx tiged benallfree/pocketpages/starters/minimal .</code></pre>
+<div class="max-w-[320px] sm:max-w-full overflow-x-auto ">
+  <pre><code class="language-bash ">npx tiged benallfree/pocketpages/starters/minimal .</code></pre>
 </div>
 
 <div class="text-left  overflow  text-2xl mt-5 mb-5">
   Step 2: Run.
 </div>
-<pre class=""><code class="language-bash">pocketbase --dir=minimal/pb_data --dev serve 
+<div class="max-w-[320px] sm:max-w-full overflow-x-auto ">
+
+  <pre><code class="language-bash">pocketbase --dir=minimal/pb_data --dev serve 
 </code></pre>
+</div>
