--- a/starters/auth/pb_hooks/pages/+layout.ejs
+++ b/starters/auth/pb_hooks/pages/+layout.ejs
@@ -5,22 +5,61 @@
   <meta charset="UTF-8" />
   <title>PocketPages MPA Auth</title>
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    header {
+      padding-bottom: 0px
+    }
+
+    nav {
+      margin-bottom: 0px
+    }
+
+
+
+    main {
+      padding-top: 0px
+    }
+  </style>
 </head>
 
 <body>
-  <main>
-    <h1>PocketPages MPA Auth Demo</h1>
-    <hr />
-    <% if (auth) { %>
-    <p>Logged in as <%= auth.get('email') %></p>
-    <a href="/account">Account</a>
-    <a href="/auth/logout">Logout</a>
-    <% } else { %>
-    <a href="/auth/login">Login</a> or <a href="/auth/register">Register</a>
-    <% } %>
+  <header>
+
+    <nav>
+      <a href="/"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" height="70" viewBox="0 0 48 48">
+          <path fill="#E8EAF6" d="M42 39L6 39 6 23 24 6 42 23z"></path>
+          <path fill="#C5CAE9" d="M39 21L34 16 34 9 39 9zM6 39H42V44H6z"></path>
+          <path fill="#B71C1C" d="M24 4.3L4 22.9 6 25.1 24 8.4 42 25.1 44 22.9z"></path>
+          <path fill="#D84315" d="M18 28H30V44H18z"></path>
+          <path fill="#01579B" d="M21 17H27V23H21z"></path>
+          <path fill="#FF8A65" d="M27.5,35.5c-0.3,0-0.5,0.2-0.5,0.5v2c0,0.3,0.2,0.5,0.5,0.5S28,38.3,28,38v-2C28,35.7,27.8,35.5,27.5,35.5z"></path>
+        </svg></a>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <% if (auth) { %>
+        <li><a href="/account">Account</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
+        <% } else { %>
+        <li><a href="/auth/login">Login</a></li>
+        <li><a href="/auth/register">Register</a></li>
+        <% } %>
+      </ul>
+    </nav>
+    <% if(params.__flash) { %>
     <div>
-      <%- slot %>
+      <mark><%= params.__flash %></mark>
     </div>
+    <% } %>
+    <% if (auth && !auth.verified()) { %>
+    <div>
+      <mark>Account not verified <a href="/auth/verify">Resend Verification Email</a></mark>
+    </div>
+    <% } %>
+  </header>
+  <main>
+    <hr />
+    <%- slot %>
   </main>
 </body>
 
