--- a/starters/auth/pb_hooks/pages/auth/login/index.ejs
+++ b/starters/auth/pb_hooks/pages/auth/login/index.ejs
@@ -65,16 +65,22 @@
 </form>
 
 <hr />
-<h3>Password Login</h3>
+<h3 data-tooltip="featuring PicoCSS">Password Login</h3>
 <% if (!methods.password.enabled) { %>
 <mark>Password login is disabled. See README.md for details.</mark>
 <% } %>
 <form method="post">
+  <fieldset class="grid">
   <input type="hidden" name="mode" value="password" />
-  <label>Email</label>
-  <input name="identity" value="<%= data.identity %>" />
-  <label>Password</label>
-  <input name="password" type="password" />
+  <label>
+    Email
+    <input name="identity" value="<%= data.identity %>" />
+  </label>
+  <label>
+    Password
+    <input name="password" type="password" />
+  </label>
+  </fieldset>
   <button type="submit">Login</button>
   <a href="/auth/forgot">Forgot Password</a>
 
@@ -86,11 +92,10 @@
 <% if (!methods.otp.enabled) { %>
 <mark>OTP login is disabled. See README.md for details.</mark>
 <% } %>
-<form method="post" action="/auth/login/otp">
+<form method="post" action="/auth/login/otp" role="group">
   <input type="hidden" name="mode" value="otp-request" />
-  <label>Email</label>
   <input name="identity" value="<%= data.identity %>" />
-  <button type="submit">Send OTP Code</button>
+  <input type="submit" value="Send OTP Code"</input>
 </form>
 
 <hr />
