Revert "PicoCSS Auth Starter"
This reverts commit 35519ced1edc33773188d44a12adfbfa8385dad9, reversing
changes made to c5d3ac713bd2a527928ac69d7542c710198af66f.

--- a/starters/auth/pb_hooks/pages/index.ejs
+++ b/starters/auth/pb_hooks/pages/index.ejs
@@ -1,44 +1,4 @@
-<div class="grid">
-  <article>
-    <header style="text-align:center;">
-      <b>PocketPages</b>
-    </header>
-    <body>
-      <img
-      alt="Undraw Authentication"
-      src="<%= asset('/image/undraw_secure-login.svg') %>"
-      height="250">
-    </body>
-    <footer>
-      <blockquote >
-        <a href="https://undraw.co/">unDraw</a> provided SVG's
-        <br><br>
-        <cite>— by <a href="https://twitter.com/ninalimpi" target="_blank">Katerina Limpitsouni</a></cite>
-      </blockquote>
-    </footer>
-  </article>
-  <article>
-    <body>
-      <h2>MPA Auth Demo</h2>
-      <hr>
-      <p>
-      <sup><ins>FYI</ins></sup>With <a href="https://picocss.com/">PicoCSS</a> You can:
-      <ul>
-        <li>markup keyboard references i.e. <kbd>Ctrl + s</kbd></li>
-        <li>delete keyboard references i.e. <kbd><del>Ctrl + s</del></kbd><del></li>
-      </ul>
-      </p>
-    </body>
-  </article>
-  <article>
-    <header style="text-align:center;">
-      <b>Now with PicoCSS</b>
-    </header>
-    <body>
-      <img
-      alt="Undraw Authentication"
-      src="<%= asset('/image/undraw_authentication.svg') %>"
-      height="250">
-    </body>
-  </article>
+<div>
+  <h2>Home</h2>
+  <p>Welcome to the PocketPages MPA Auth Demo</p>
 </div>
