--- a/starters/auth/pb_hooks/pages/auth/login/index.ejs
+++ b/starters/auth/pb_hooks/pages/auth/login/index.ejs
@@ -65,22 +65,16 @@
 </form>
 
 <hr />
-<h3 data-tooltip="featuring PicoCSS">Password Login</h3>
+<h3>Password Login</h3>
 <% if (!methods.password.enabled) { %>
 <mark>Password login is disabled. See README.md for details.</mark>
 <% } %>
 <form method="post">
-  <fieldset class="grid">
   <input type="hidden" name="mode" value="password" />
-  <label>
-    Email
-    <input name="identity" value="<%= data.identity %>" />
-  </label>
-  <label>
-    Password
-    <input name="password" type="password" />
-  </label>
-  </fieldset>
+  <label>Email</label>
+  <input name="identity" value="<%= data.identity %>" />
+  <label>Password</label>
+  <input name="password" type="password" />
   <button type="submit">Login</button>
   <a href="/auth/forgot">Forgot Password</a>
 
@@ -92,10 +86,11 @@
 <% if (!methods.otp.enabled) { %>
 <mark>OTP login is disabled. See README.md for details.</mark>
 <% } %>
-<form method="post" action="/auth/login/otp" role="group">
+<form method="post" action="/auth/login/otp">
   <input type="hidden" name="mode" value="otp-request" />
+  <label>Email</label>
   <input name="identity" value="<%= data.identity %>" />
-  <input type="submit" value="Send OTP Code"</input>
+  <button type="submit">Send OTP Code</button>
 </form>
 
 <hr />
