--- a/starters/auth/pb_hooks/pages/+layout.ejs
+++ b/starters/auth/pb_hooks/pages/+layout.ejs
@@ -21,6 +21,7 @@
       padding-top: 0px
     }
   </style>
+
 </head>
 
 <body>
@@ -61,6 +62,14 @@
     <hr />
     <%- slot %>
   </main>
+  <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
+  <script>
+    const pb = new PocketBase(window.location.origin)
+    console.log({
+      pb
+    })
+  </script>
+
 </body>
 
 </html>
