--- a/starters/htmx/pb_hooks/pages/(site)/+layout.ejs
+++ b/starters/htmx/pb_hooks/pages/(site)/+layout.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,8 +9,8 @@
   <meta property="og:title" content="<%=meta('title') || 'htmx starter kit'%>" />
   <meta property="og:description" content="<%=meta('description') || 'htmx starter kit'%>" />
   <meta property="og:image" content="<%=meta('image') || '/android-chrome-512x512.png'%>" />
-  <meta property="og:url" content="<%=meta('path') ? `${meta('path')}` : meta('url') || `${ctx.request.url}`%>" />
-  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+  <meta property="og:url" content="<%=meta('path') ? `${meta('path')}` : meta('url') || `${request.url}`%>" />
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/2.0.3/htmx.min.js" integrity="sha512-dQu3OKLMpRu85mW24LA1CUZG67BgLPR8Px3mcxmpdyijgl1UpCM1RtJoQP6h8UkufSnaHVRTUx98EQT9fcKohw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <%- slots.head %>
 </head>
