--- a/starters/htmx/pb_hooks/pages/api/count.ejs
+++ b/starters/htmx/pb_hooks/pages/api/count.ejs
@@ -1,4 +1,6 @@
-<%
-  $app.store().set('count', ($app.store().get('count')||1) + 1)
-%>
-<%- include('/_private/count.ejs') %>
+<script server>
+  $app.runInTransaction(() => {
+    store('count', (store('count') || 1) + 1)
+  })
+</script>
+<%- include('count.ejs') %>
